--- a/main.css
+++ b/main.css
@@ -21,6 +21,8 @@ body {
 
 header {
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     width: 100%;
     height: 20vh;
     min-height: 100px;
@@ -205,8 +207,8 @@ input:checked+.slider:before {
 
 .toggle-button-container {
     display: flex;
-    position: fixed;
-    width: 170px;
+    padding-left: 100px;
+    width: 270px;
     top: 95px;
     left: 250px;
     flex-direction: row;
