--- a/main.css
+++ b/main.css
@@ -47,6 +47,8 @@ header {
     border-width: 5px;
     border-color: var(--lime);
     transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+
+    z-index: 10;
 }
 
 .change {
@@ -207,7 +209,8 @@ input:checked+.slider:before {
 
 .toggle-button-container {
     display: flex;
-    padding-left: 100px;
+    padding-left: 5%;
+    /*padding-left: 100px*/
     width: 270px;
     top: 95px;
     left: 250px;
@@ -226,3 +229,79 @@ input:checked+.slider:before {
     position: relative;
 
 }
+
+/*category cards*/
+
+.grid-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    left: 5%;
+    width: 78%;
+    height: 1000px;
+    background-color: white;
+    border-radius: 2%;
+
+}
+
+.play-mode-color {
+    background-color: var(--dark-violet);
+}
+
+.grid-heading {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 20%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.grid-heading h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    font-size: 60px;
+    font-family: Barrio;
+    color: rgb(202, 30, 179);
+}
+
+#girl-image {
+    display: flex;
+    margin-top: 5px;
+
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+    height: 80%;
+    grid-template-columns: auto auto auto auto;
+    padding: 2px;
+    column-gap: 10px;
+    row-gap: 10px;
+
+}
+
+.grid-item {
+    background-color: aliceblue;
+    border-radius: 5%;
+}
+
+.grid-item-1 {}
+
+.grid-item-2 {}
+
+.grid-item-3 {}
+
+.grid-item-4 {}
+
+.grid-item-5 {}
+
+.grid-item-6 {}
+
+.grid-item-7 {}
+
+.grid-item-8 {}
