--- a/main-media.css
+++ b/main-media.css
@@ -66,6 +66,11 @@
     .hamburger-menu {
         top: 40px;
         position: fixed;
-        left: 235px;
+        left: 370px;
 
     }
+
+
+
+
+}
