--- a/main.css
+++ b/main.css
@@ -239,7 +239,7 @@ input:checked+.slider:before {
     align-items: center;
     left: 5%;
     width: 78%;
-    height: 1000px;
+    height: 100%;
     background-color: white;
     border-radius: 2%;
 
@@ -278,7 +278,8 @@ input:checked+.slider:before {
     display: grid;
     width: 100%;
     height: 80%;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     padding: 2px;
     column-gap: 10px;
     row-gap: 10px;
@@ -288,20 +289,31 @@ input:checked+.slider:before {
 .grid-item {
     background-color: aliceblue;
     border-radius: 5%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    padding: 5px;
+    cursor: pointer;
 }
 
-.grid-item-1 {}
+.card-image-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    height: 70%;
+    align-items: center;
+}
 
-.grid-item-2 {}
-
-.grid-item-3 {}
-
-.grid-item-4 {}
-
-.grid-item-5 {}
-
-.grid-item-6 {}
-
-.grid-item-7 {}
-
-.grid-item-8 {}
+.card {
+    display: flex;
+    width: 100%;
+    height: 30%;
+    font-family: Mali;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    color: var(--dark-violet);
+}
