--- a/main-media.css
+++ b/main-media.css
@@ -1,3 +1,9 @@
+@media screen and (max-width:1379px) {
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
 @media screen and (max-width:1182px) {
     .navbar {
         right: -500px;
@@ -13,7 +19,7 @@
     }
 
     .grid {
-        grid-template-columns: auto auto auto;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
     .grid-heading h1 {
@@ -24,10 +30,14 @@
 
 }
 
-@media screen and (max-width:713px) {
+@media screen and (max-width:1052px) {
     .grid {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
     }
+}
+
+@media screen and (max-width:713px) {
+
 
     #girl-image {
         display: none;
@@ -35,6 +45,12 @@
 
     .grid-heading {
         justify-content: space-around;
+    }
+}
+
+@media screen and (max-width:693px) {
+    .grid {
+        grid-template-columns: 1fr;
     }
 }
 
@@ -73,4 +89,24 @@
 
 
 
+}
+
+@media screen and (max-width:321px) {
+
+    .grid {
+        width: 100vw;
+    }
+
+    .hamburger-menu {
+        left: 230px;
+        top: 65px;
+    }
+
+    .toggle-button-container {
+        justify-content: flex-start;
+    }
+
+    .change {
+        right: 79px;
+    }
 }
