--- a/main.css
+++ b/main.css
@@ -360,6 +360,17 @@ input:checked+.slider:before {
     transform: rotateY(180deg);
 }
 
-.preventClick {
-    pointer-events: none;
+.start-button {
+    width: 150px;
+    height: 50px;
+    position: relative;
+    left: 5%;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+}
+
+.hide {
+    visibility: hidden;
 }
