--- a/main.css
+++ b/main.css
@@ -295,6 +295,13 @@ input:checked+.slider:before {
     height: 400px;
     padding: 5px;
     cursor: pointer;
+    text-decoration: none;
+}
+
+.lime-border {
+    border-style: solid;
+    border-width: 5px;
+    border-color: var(--lime);
 }
 
 .card-image-container {
@@ -373,4 +380,52 @@ input:checked+.slider:before {
 
 .hide {
     visibility: hidden;
+}
+
+.score-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    background-color: var(--dark-violet);
+}
+
+#icon-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px;
+    width: 98%;
+    height: 80%;
+    background-color: var(--dark-violet);
+}
+
+.red-border {
+    border-style: solid;
+    border-width: 5px;
+    border-color: rgb(202, 30, 179);
+}
+
+#star-icon {
+    padding-left: 5px;
+}
+
+.game-over {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--violet);
+    width: 100vw;
+    height: 100vh;
+    z-index: 9;
+}
+
+#game-over-img {
+    position: absolute;
+    top: 0;
+    left: 29%;
 }
